# layoutir

./: .gitignore  CHANGELOG.md  LICENSE  QUICKSTART.md  README.md  benchmark.py  ingest.py  pyproject.toml  pytest.ini  requirements.txt  test_local_install.sh  test_pipeline.py
.githooks/: pre-push
.github/: FUNDING.yml  README.md  dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  Docling.txt  Research on Available Tools.txt
docs/markdown/: arxiv_2408.09869.md  table.md  table_vlm.md
src/layoutir/: __init__.py  _stability_constants.py  cli.py  pipeline.py  schema.py
src/layoutir/adapters/: __init__.py  base.py  docling_adapter.py
src/layoutir/chunking/: __init__.py  strategies.py
src/layoutir/exporters/: __init__.py  asset_writer.py  base.py  markdown_exporter.py  parquet_exporter.py  text_exporter.py
src/layoutir/extraction/: __init__.py  docling_extractor.py
src/layoutir/normalization/: __init__.py  normalizer.py  ordering_validator.py
src/layoutir/utils/: __init__.py  equality.py  hashing.py  logging_config.py
tests/: __init__.py  test_roundtrip.py
tests/docling/: doclingCacheModels.py  doclingConvertSimple.py  doclingLimitOutputSize.py  doclingTuneGPU.py  doclingVLMServer.py
tests/fixtures/golden_ir/: golden_hashes.json  sample_testing_ir.json  table_ir.json
