[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "layoutir"
version = "1.0.4"
description = "Production-grade Document Ingestion & Canonicalization Engine"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [
    {name = "Rahul Patnaik", email = "rpatnaik2005@gmail.com"}
]
maintainers = [
    {name = "Rahul Patnaik", email = "rpatnaik2005@gmail.com"}
]
keywords = ["pdf", "document", "parsing", "ir", "layout", "extraction", "chunking"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "pydantic>=2.0.0",
    "docling>=1.0.0",
    "pandas>=2.0.0",
    "pyarrow>=10.0.0",
]

[project.optional-dependencies]
cuda = [
    "torch>=2.5.0",
    "torchvision>=0.20.0",
]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.scripts]
layoutir = "layoutir.cli:main"

[project.urls]
Homepage = "https://github.com/RahulPatnaik/layoutir"
Documentation = "https://github.com/RahulPatnaik/layoutir/blob/main/README.md"
Repository = "https://github.com/RahulPatnaik/layoutir"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["layoutir*"]
exclude = ["tests*"]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
